# LightningServer

./: .gitignore  README.md  package-lock.json  plan.md  部署步骤.md  项目简历-LightningServer高并发论坛系统.md
backend/: .gitignore  CMakeLists.txt  build.bat  build.sh  download_deps.ps1  download_deps.sh
backend/include/cache/: CacheProxy.h
backend/include/db/: DatabaseProxy.h
backend/include/handler/: ApiHandler.h
backend/include/net/: AsioUtil.h  Buffer.h  HttpParser.h  HttpServer.h  HttpSession.h
backend/include/service/: ArticleService.h  CommentService.h
backend/include/util/: Config.h  Platform.h
backend/src/: main.cpp
backend/src/cache/: CacheProxy.cpp
backend/src/db/: DatabaseProxy.cpp
backend/src/handler/: ApiHandler.cpp
backend/src/net/: HttpParser.cpp  HttpServer.cpp  HttpSession.cpp
backend/src/service/: ArticleService.cpp  CommentService.cpp
backend/src/util/: Config.cpp
docker/: docker-compose.yml
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docs/: API.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: CommentSection.vue
frontend/src/router/: index.ts
frontend/src/types/: index.ts
frontend/src/views/: ArticleDetail.vue  ArticleList.vue  HotArticles.vue
